ICU-13122 Updated build.xml to make secureCheck work as designed (although, it's failing because of security policy configuration issues)
X-SVN-Rev: 40462